--- a/src/components/LogoutButton.css
+++ b/src/components/LogoutButton.css
@@ -6,7 +6,8 @@
   margin-top: 20px;
   padding: 10px 20px;
   font-size: 16px;
-  width: 100%;
+  align-self: center;
+  width: 80%;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
