--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -32,6 +32,8 @@
   border-radius: 5px;
   cursor: pointer;
   transition: background 0.3s ease-in-out;
+  width: 80%;
+  align-self: center;
 }
 
 .channel:hover,
